--- a/templates/index.html
+++ b/templates/index.html
@@ -55,6 +55,40 @@
     </style>
 </head>
 <body>
+      <!-- Main content of your dashboard -->
+    <h1>Realtime Data Dashboard</h1>
+
+    <!-- Hidden message for Inspect Element -->
+    <!-- 
+    # Author: Eddy Adha Saputra
+    # GitHub: https://github.com/eddyyucca
+    # Description: Realtime Data Dashboard with Flask
+    # This dashboard monitors real-time data from device 333D01, including Acceleration, Velocity, and Demodulation.
+
+    # Features
+    # - Realtime Monitoring: Displays acceleration, velocity, and demodulation data in real-time.
+    # - Flask Backend: Python-based backend using Flask.
+    # - Responsive Dashboard: User-friendly and responsive interface.
+
+   
+      _____     _      _                                                                       
+     | ____| __| |  __| | _   _  _   _  _   _   ___  __ _                                      
+     |  _|  / _` | / _` || | | || | | || | | | / __|/ _` |                                     
+     | |___| (_| || (_| || |_| || |_| || |_| || (__| (_| |                                     
+     |_____|\__,_| \__,_| \__, | \__, | \__,_| \___|\__,_|                                     
+                          |___/  |___/                                                       
+      _____  _              ____            _                                                
+     |_   _|| |__    ___   / ___| ___    __| |  ___                                          
+       | |  | '_ \  / _ \ | |    / _ \  / _` | / _ \                                         
+       | |  | | | ||  __/ | |___| (_) || (_| ||  __/                                         
+       |_|  |_| |_| \___|  \____|\___/  \__,_| \___|                                         
+                                            _          _    _                                _ 
+       ___  ___   _ __  _ __  _   _  _ __  | |_  ___  | |_ | |__    ___   ___   ___   _   _ | |
+      / __|/ _ \ | '__|| '__|| | | || '_ \ | __|/ __| | __|| '_ \  / _ \ / __| / _ \ | | | || |
+     | (__| (_) || |   | |   | |_| || |_) || |_ \__ \ | |_ | | | ||  __/ \__ \| (_) || |_| || |
+      \___|\___/ |_|   |_|    \__,_|| .__/  \__||___/  \__||_| |_| \___| |___/ \___/  \__,_||_|
+                                  |_|                                                        
+    -->
     <div class="container">
         <div class="header">
             <h1>PLTU ASAM-ASAM Monitoring</h1>
